# QGifer

./: .gitignore  CMakeLists.txt  README.md  icon.rc  res.qrc  tsupdate
cmake/: CMakeCPack.cmake  CPackOptions.cmake.in
doc/: BUILD_WIN32.md  COPYRIGHT  ChangeLog  README  TRANSLATOR'S NOTE.txt  qgifer.desktop  qgifer.xpm
doc/menu/: qgifer
locale/: cs.qm  de.qm  fr.qm  jp.qm  pl.qm  pt.qm  ru.qm  sv.qm  zh_TW.qm
src/: aboutdialog.cpp  aboutdialog.h  converterdialog.cpp  converterdialog.h  frameplayer.cpp  frameplayer.h  gifcreator.cpp  gifcreator.h  gifwidget.cpp  gifwidget.h  interpolationdialog.cpp  interpolationdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  objectwidget.cpp  objectwidget.h  optimizerdialog.cpp  optimizerdialog.h  palettewidget.cpp  palettewidget.h  previewwidget.cpp  previewwidget.h  qgifcreator.cpp  qgifcreator.h  qmultislider.cpp  qmultislider.h  retranslatable.h  textobject.cpp  textobject.h  textrenderer.cpp  textrenderer.h  textwidget.cpp  textwidget.h  version.h.in  workspace.cpp  workspace.h  workspaceobject.cpp  workspaceobject.h
src/core/: AbstractFramePlayer.cpp  AbstractFramePlayer.h  OpenCVFramePlayer.cpp  OpenCVFramePlayer.h  Palette.cpp  Palette.h
src/libs/FFMpegDecoder/: ffmpegDecode.cpp  ffmpegDecode.h  main.cpp
src/utils/: qgiferformatter.cpp  qgiferformatter.h
src/widgets/: QJumpSlider.cpp  QJumpSlider.h  QPressAction.cpp  QPressAction.h  qjumpslider.cpp  qjumpslider.h
tests/: generate_sample.sh  sample.avi
translations/: cs.ts  de.ts  en.ts  fr.ts  jp.ts  pl.ts  pt.ts  ru.ts  sv.ts  template.ts  zh_TW.ts
ui/: aboutdialog.ui  converterdialog.ui  frameplayer.ui  gifwidget.ui  interpolationdialog.ui  mainwindow.ui  objectwidget.ui  optimizerdialog.ui  textwidget.ui
